@@ -9,6 +9,7 @@ http://sourceforge.net/tracker/?group_id=86862
 
 Version 0.7.6.2
 ---------------
++ MPEG-4: Handling of corrupted stream size info with some PCM streams
 x MPEG-4: better handling of bitrate mode (VBR or CBR)
 
 Version 0.7.6.1, 2008-03-14
